--- a/client/app/Components/login/home.scss
+++ b/client/app/Components/login/home.scss
@@ -1,15 +1,27 @@
+body {
+  background-color: whitesmoke;
+}
+
 .home-navbar {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  border: solid;
-  border-color: blue;
+  // margin: 10px 10px 0 10px;
+  margin-bottom: -30px;
+  // border: solid;
+  // border-color: blue;
 }
 
 .home-page {
+  margin-top: 5vh;
+  margin-bottom: 5vh;
+  margin-left: 30%;
+  height: auto;
+  width: 45vw;
   border: solid;
   border-color: black;
-  height: 100vh;
+  border-radius: 15px;
+  background-color: gainsboro;
 }
 
 .home-logo {
@@ -17,10 +29,29 @@
   justify-content: center;
 }
 
+.logo-img {
+  width: 50%;
+}
+
+.msg-logo {
+  width: 10%;
+  margin-left: 20px;
+  margin-top: 20px;
+}
+
+.settings-logo {
+  width: 60%;
+  margin-top: 15px;
+  margin-right: -350px;
+}
+
 .home-dog-list {
   display: flex;
-  justify-content: center;
-  border: solid;
-  border-color: pink;
-  height: 75vh;
+  flex-direction: column;
+  align-items: center;
+  // border: solid;
+  // border-color: pink;
+  height: auto;
+  margin-bottom: 20px;
+  overflow: scroll;
 }
