--- a/client/app/Components/Petinfo/petInfo.scss
+++ b/client/app/Components/Petinfo/petInfo.scss
@@ -8,7 +8,6 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  // background: var(--clr-grey-10);
   background: linear-gradient(
     100deg,
     rgb(242, 124, 146) 30%,
@@ -57,12 +56,12 @@ body {
     }
 
     .largeField {
-        width: 100px;
-        min-height: 20px;
-        max-height: 100px;
-        overflow-x: hidden;
-        overflow-y: scroll;
-        border: 1px solid black;
+        display: block;
+        width: 100%;
+        overflow: hidden;
+        resize: both;
+        min-height: 40px;
+        line-height: 20px;
     }
 }
 
