--- a/client/app/Components/home/dogCard.scss
+++ b/client/app/Components/home/dogCard.scss
@@ -1,15 +1,25 @@
+
+// body {
+//   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+//   Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+// }
+
 .dog-card {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
   // border: solid;
   // border-color: gray;
   border-radius: 15px;
   padding: 10px 10px;
   margin-top: 10px;
-  height: 20vh;
+  height: 25vh;
   width: 80%;
   background-color: pink;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+  Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  line-height: 1.5;
+  font-size: 0.875rem;
 }
 
 .dog-img {
