--- a/client/app/Components/home/home.scss
+++ b/client/app/Components/home/home.scss
@@ -7,16 +7,19 @@ body {
   flex-direction: row;
   justify-content: space-between;
   // margin: 10px 10px 0 10px;
-  margin-bottom: -30px;
+  margin-bottom: .5rem;
   // border: solid;
   // border-color: blue;
 }
 
 .home-page {
+  display: flex;
+  flex-direction: column;
   margin-top: 5vh;
   margin-bottom: 5vh;
-  margin-left: 30%;
-  height: auto;
+  margin-left: auto;
+  // margin-right: auto;
+  height: 80vh;
   width: 45vw;
   border: solid;
   border-color: black;
@@ -27,6 +30,7 @@ body {
 .home-logo {
   display: flex;
   justify-content: center;
+  margin-top: -2vh;
 }
 
 .logo-img {
@@ -35,14 +39,14 @@ body {
 
 .msg-logo {
   width: 10%;
-  margin-left: 20px;
+  margin-left: 20px;;
   margin-top: 20px;
-}
+  margin-right: 20px;
 
-.settings-logo {
-  width: 60%;
-  margin-top: 15px;
-  margin-right: -350px;
+  img {
+    height: auto;
+    width: 100%;
+  }
 }
 
 .home-dog-list {
@@ -53,5 +57,13 @@ body {
   // border-color: pink;
   height: auto;
   margin-bottom: 20px;
-  overflow: scroll;
+  // overflow: auto;
+  // overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+.btn {
+  padding: 0.375rem 0.75rem;
+  display: inline-block;
+  background-image: url('../../assets/msg-logo.png');
 }
