--- a/client/app/Components/login/login.scss
+++ b/client/app/Components/login/login.scss
@@ -27,6 +27,7 @@
     background-repeat: no-repeat;
     width: 100%;
     height: 50px;
+    margin-left: 7vw;
   }
 
 .loginImage {
@@ -43,6 +44,8 @@
 }
 
 .loginContent {
+  margin-left: 5vw;
+
     img {
     width: 0auto;
     height: 200px;
